# legv8sim

./: .gitignore  CNAME  Cargo.toml  GUI.py  README.md  app.py  array.conf  fact.s  facts.s  foo.txt  interpreter.py  legv8.el  legv8.nanorc  legv8.sublime-package  legv8.sublime-syntax  legv8sim.tex  package-lock.json  package.json  program.asm  program.s  program.txt  requirements.txt  run.sh  scrollframe.py
legv8/: CHANGELOG.md  README.md  package.json
legv8-vim/ftdetect/: legv8.vim
legv8-vim/ftplugin/: legv8.vim
legv8-vim/indent/: legv8.vim
legv8-vim/syntax/: legv8.vim
legv8-vscode/: CHANGELOG.md  README.md  language-configuration.json  legv8-vscode-0.0.1.vsix  package.json  vsc-extension-quickstart.md
legv8-vscode/syntaxes/: legv8.tmLanguage.json
legv8/syntaxes/: legv8.tmLanguage.json
legv8sim/: docusaurus.config.js  package-lock.json  package.json
my-app/: .gitignore  package.json  svelte.config.js
src/: legv8.rs  main.rs  memory.rs  registers.rs  scrollable.rs
src/syntax/: legv8.sublime-syntax
syntax/: legv8.vim
tests/: array.conf.txt  basic.s  f2c.s  fact.s  sort.s  test1.s
