[package]
name = "legv8sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", features = ["glow", "tokio"] }
iced_native = "0.8"
bitfield = "0.14.0"
bitvec = "1"
syntect = "5.0"