[package]
name = "legv8sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7", features = ["glow", "tokio"] }
iced_native = "0.8"
iced_style = "0.6.0"
syntect = "5.0"
nom = "7"
