[package]
name = "legv8sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.7.0", features = ["glow", "tokio"] }
iced_native = "0.10.3"
iced_style ="0.9.0"
syntect = "5.0.0"
nom = "7"
